# pytasktracker

./: .gitignore  README.md  main.py  pyproject.toml  rest.http
.github/workflows/: docs.yml
docs/: Makefile  conf.py  datetime_utilities.rst  index.rst  logging_config.rst  models.rst  mods.rst  persistence.rst  services.rst
src/: __init__.py  datetime_utilities.py  logging_config.py  models.py  persistence.py  services.py
src/mods/: __init__.py  gui_api.py  rest_api.py
tests/: conftest.py  generated.py  test_persistence.py  test_playwright.py  test_rest_api.py  test_services.py
